--- a/mirror-frontend/index.html
+++ b/mirror-frontend/index.html
@@ -4,6 +4,38 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- (Optional) Keep these Google fonts if you still use them elsewhere -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@700;900&display=swap" rel="stylesheet">
+
+    <!-- Preload Sansation Bold (faster paint for the hero heading) -->
+    <link
+      rel="preload"
+      as="font"
+      href="/fonts/Sansation-Bold.ttf"
+      type="font/ttf"
+      crossorigin
+    />
+
+    <!-- Register Sansation (regular + bold) -->
+    <style>
+      @font-face {
+        font-family: "Sansation";
+        src: url("/fonts/Sansation-Regular.ttf") format("truetype");
+        font-weight: 400;
+        font-style: normal;
+        font-display: swap;
+      }
+      @font-face {
+        font-family: "Sansation";
+        src: url("/fonts/Sansation-Bold.ttf") format("truetype");
+        font-weight: 700;
+        font-style: normal;
+        font-display: swap;
+      }
+    </style>
+
     <title>Vite + React</title>
   </head>
   <body>
