--- a/mirror-frontend/index.html
+++ b/mirror-frontend/index.html
@@ -36,7 +36,7 @@
       }
     </style>
 
-    <title>Vite + React</title>
+    <title>Mirror</title>
   </head>
   <body>
     <div id="root"></div>
