--- a/mirror-frontend/index.html
+++ b/mirror-frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/logo192.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- (Optional) Keep these Google fonts if you still use them elsewhere -->
