--- a/mirror-frontend/index.html
+++ b/mirror-frontend/index.html
@@ -37,9 +37,23 @@
     </style>
 
     <title>Mirror</title>
+    
+    <!-- Early theme setup to prevent flashing -->
+    <script>
+      (function() {
+        // Check for saved theme preference or use dark as default
+        const savedTheme = localStorage.getItem('theme') || 'dark';
+        // Apply dark class to html element if theme is dark
+        if (savedTheme === 'dark') {
+          document.documentElement.classList.add('dark');
+        } else {
+          document.documentElement.classList.remove('dark');
+        }
+      })();
+    </script>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/App.jsx"></script>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
